# fastapi-auth-service

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  __init__.py  alembic.ini  architecture.mmd  backup.sql  conftest.py  create_test_user.py  curl.txt  debug_entry.py  email_change_plan.md  email_enhancement_plan.md  pyproject.toml  pytest.ini  register.json  requirements.txt  retrieve_stripe_products.py  run_api_server.py  server.pid  setup_stripe_test_data.py  stripe_test_data.json  test.db  test_credit_amount_fix.py  test_email_double_sending.py  test_email_sending.py  test_logging.py  test_password_reset.py  test_plan_subscription.py  test_stripe_fix.py  test_stripe_items_fix.py  test_stripe_verification.py  test_subscription_email_double_sending.py  test_transaction_email_flow.py  test_transaction_monetary_amount.py  test_verify_transaction.py  (+5 more)
alembic/: env.py
app/: main.py
docs/: authentication_flows.md  database_error_handling.md  google_oauth_integration.md  project_onboarding.md  stripe_integration.md
examples/: google_oauth_example.html  prepare_test_environment.py  stripe_credits_example.py  test_credit_stripe_integration.py  test_stripe_api.py
memory-bank/: activeContext.md  architecture.md  auth_router_modification_plan.md  auth_router_refactoring_implementation.md  auth_router_refactoring_plan.md  auth_router_test_plan.md  auth_verification_refactor_plan.md  cleanup_plan.md  code_structure.md  decisionLog.md  documentation_plan.md  email_change_verification_plan.md  email_diagnostic_plan.md  email_implementation.md  email_login_implementation_plan.md  email_login_technical_implementation.md  email_only_authentication.md  email_only_authentication_plan.md  endpoint_security_code_changes.md  endpoint_security_documentation.md  endpoint_security_enhancement_plan.md  endpoint_security_implementation_plan.md  google_oauth_implementation.md  google_oauth_integration_plan.md  productContext.md  progress.md  security_review.md  subscription_tier_update_plan.md  systemPatterns.md  username_removal_code_changes.md  username_removal_plan.md  verify_email_changes.md
(+185 files in other folders)
