[tool.poetry]
name = "auth-service"
version = "1.0.0"
description = "Authentication service with FastAPI and RabbitMQ"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
pydantic = {extras = ["email"], version = "^2.6.3"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.27"}
pika = "^1.3.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
aiosqlite = "^0.19.0"
python-logging-rabbitmq = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-asyncio = "^0.23.5"
httpx = "^0.27.0"
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi-line-output = 3 