[tool.poetry]
name = "auth-service"
version = "1.0.0"
description = "Authentication service with FastAPI and RabbitMQ"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
aiosqlite = "^0.20.0"
alembic = "^1.14.0"
annotated-types = "^0.7.0"
anyio = "^4.6.2"
asyncpg = "^0.30.0"
bcrypt = "^4.2.0"
fastapi = "^0.115.4"
greenlet = "^3.1.1"
httpx = "^0.27.2"
loguru = "^0.7.2"
motor = "^3.6.0"
passlib = "^1.7.4"
pika = "^1.3.2"
pydantic = {extras = ["email"], version = "^2.9.2"}
pydantic-settings = "^2.6.1"
pymongo = "^4.9.2"
python-jose = "^3.3.0"
python-multipart = "^0.0.17"
SQLAlchemy = "^2.0.36"
uvicorn = "^0.32.0"
websockets = "^13.1"
fastapi-mail = "^1.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
